# Gandiv

./: CMakeLists.txt  README.md  build.sh
dep/: grammar.g  keywords.k
programs/: couldnotrecogtoken.aj  fibonacci.aj  functionsparamsmismatch.aj  helloworld.aj  operandsmismatch.aj  primefact.aj  syntaxerr.aj  variabledecerr.aj
src/: interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
